# othello

./: .gitignore  CMakeLists.txt  main.cpp  notes.md  readme.md
.cache/clangd/index/: AI.h.10497BADD621FB1F.idx  AiEngine.cpp.CEA1A012882ED27E.idx  AiEngine.h.678AFB8290FB34C6.idx  Angle.hpp.F42A3489DAF8FFCC.idx  Angle.inl.787B6E69652A2CF3.idx  AudioDevice.cpp.20D179F678D6622F.idx  AudioDevice.hpp.F24F519324439C14.idx  AudioResource.cpp.187EA31F9735F669.idx  AudioResource.hpp.766A480A3F933FB8.idx  AutoreleasePoolWrapper.hpp.827103DFA062987D.idx  AutoreleasePoolWrapper.mm.C4F6FF83C638A9DC.idx  BlendMode.cpp.D7AD807D58F93B0C.idx  BlendMode.hpp.48A0D7D61DD6B65A.idx  CircleShape.cpp.D0452944144CB891.idx  CircleShape.hpp.777EC71A6A009519.idx  Clipboard.cpp.105B4BAADE5E0E27.idx  Clipboard.hpp.A43ABD0BDA674AF8.idx  ClipboardImpl.hpp.170F7F6CF3A9F2D6.idx  ClipboardImpl.hpp.2211569B11DB3AC7.idx  ClipboardImpl.mm.1354B3B3F52BD301.idx  Clock.cpp.FF85E28FE15B4E0F.idx  Clock.hpp.AD6DDC0C73B47CFE.idx  Color.hpp.4429F16AC6157BBE.idx  Color.inl.FC61D62B3D6CEEEC.idx  Config.hpp.B731E83F0E2FC3DC.idx  Context.cpp.858E96123EBF2B32.idx  Context.hpp.22F6B26DE87050E5.idx  ContextSettings.hpp.9644A293EAC3AC49.idx  ConvexShape.cpp.994CE915819CB3D6.idx  ConvexShape.hpp.F95138EAA9757EAC.idx  CoordinateType.hpp.71AA5C27B7649476.idx  Cursor.cpp.818D4A46765D5B02.idx  Cursor.hpp.27352CC96042C246.idx  CursorImpl.hpp.112405D84BC79AA7.idx  CursorImpl.hpp.2BC60BB903119706.idx  CursorImpl.mm.D5B2DC46D03976BF.idx  DisplayEngine.cpp.AEE62D483603E1B9.idx  DisplayEngine.h.3538CD2F49C12B80.idx  Drawable.hpp.94D95E97A09AC86A.idx  EnumArray.hpp.76E2C4B28C5ACB12.idx  (+304 more)
Display/: DisplayEngine.cpp  DisplayEngine.h
ai_bot/: AI.h  AiEngine.cpp  AiEngine.h  SelectAIAgent.cpp  readme.md
ai_bot/advance/: ActorCritic.cpp  ActorCritic.h  AiEngine.h
ai_bot/basic/: Greedy.cpp  Greedy.h
game_logic/: GameEngine.cpp  GameEngine.h  GmaeEngine.cpp  GmaeEngine.h  History.h  Move.h  game_logic.cpp  game_logic.h
test_Cases/: phase1_test.cpp
